// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kerningMode renders 0 1`] = `
Array [
  .c0 {
  kerning-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders function 1`] = `
Array [
  .c0 {
  kerning-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders invalid theme path 1`] = `
Array [
  .c0 {
  kerning-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders negative number 1`] = `
Array [
  .c0 {
  kerning-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    kerning-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    kerning-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    kerning-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    kerning-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    kerning-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    kerning-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    kerning-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    kerning-mode: July;
  }
}

@media April {
  .c0 {
    kerning-mode: August;
  }
}

@media January {
  .c0 {
    kerning-mode: September;
  }
}

@media April {
  .c0 {
    kerning-mode: November;
  }
}

@media June {
  .c0 {
    kerning-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    kerning-mode: July;
  }
}

@media April {
  .c0 {
    kerning-mode: August;
  }
}

@media January {
  .c0 {
    kerning-mode: September;
  }
}

@media April {
  .c0 {
    kerning-mode: November;
  }
}

@media June {
  .c0 {
    kerning-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    kerning-mode: January;
  }
}

@media April {
  .c0 {
    kerning-mode: December;
  }
}

@media January {
  .c0 {
    kerning-mode: April;
  }
}

@media April {
  .c0 {
    kerning-mode: May;
  }
}

@media June {
  .c0 {
    kerning-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    kerning-mode: January;
  }
}

@media April {
  .c0 {
    kerning-mode: December;
  }
}

@media January {
  .c0 {
    kerning-mode: April;
  }
}

@media April {
  .c0 {
    kerning-mode: May;
  }
}

@media June {
  .c0 {
    kerning-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders postitive number 1`] = `
Array [
  .c0 {
  kerning-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders string 1`] = `
Array [
  .c0 {
  kerning-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`kerningMode renders valid theme path 1`] = `
Array [
  .c0 {
  kerning-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  kerning-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
